--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -377,6 +377,7 @@ footer#openuchile-footer img:hover {
     border-color: #004B93;
     text-shadow: none;
     width: 60%;
+    border-radius: 10px;
 }
 
 .course-info button.btn:hover {
@@ -450,6 +451,7 @@ footer#openuchile-footer img:hover {
     color: black !important;
     cursor: text;
     margin-top: 30px !important;
+    font-weight: 700;
 }
 
 .enroll-button {
