refactor: remove background color in certificates validator
- remove separator in FAQ
- remove separetor in Certificates validator

--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -192,10 +192,6 @@ footer#openuchile-footer img:hover {
     color: black;
 }
 
-#certificate_validation .card, #certificate_validation input {
-    background-color: #00000021;
-    border: none;
-}
 
 #certificate_validation .btn {
     box-shadow: none !important;
@@ -207,8 +203,8 @@ footer#openuchile-footer img:hover {
 }
 
 #certificate_validation .btn:hover {
-    background-color: #048dc9;
-    border-color: #048dc9;
+    background-color: #008852;
+    border-color: #008852;
 }
 
 /* Contact Form */
