fix: how to show page in widder screens

--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -271,8 +271,7 @@ footer#openuchile-footer img:hover {
 /* Courses List */
 
 .courses-list {
-    margin-left: 0px;
-    margin-right: 0px;
+    max-width: var(--page-max-width);
 }
 .courses-list li:nth-child(2n+1) {
     margin-right: 1em;
@@ -721,6 +720,7 @@ a.nav-link.user-menu:hover,
     margin-top: 1rem;
     padding-bottom: 1rem;
     font-family: 'Raleway', sans-serif !important;
+    flex-direction: column;
 }
 #open-navbar .nav-link {
     color: #004B93;
@@ -942,14 +942,20 @@ input[type="search"]::-ms-input-placeholder {
 }
 .courses-container .highlighted-courses{
     display: flex;
-    max-width: 1765px;
+    max-width: var(--page-max-width);
 }
 .courses-container .highlighted-courses .courses-list{
     margin-left: auto;
     margin-right: auto;
 }
-.courses-container {
-    max-width: 1765px;
+
+.max-course-container{
+    max-width: var(--page-max-width);
+}
+.open-institutions-body{
+    max-width: var(--page-max-width);
+    margin-left: auto;
+    margin-right: auto;
 }
 /* New course card */
 
@@ -1721,7 +1727,7 @@ aside h2.open-refine-search{
 }
 
 .main-container .navbar.course-tabs{
-    max-width: 1920px;
+    max-width: var(--page-max-width);
     margin: auto;
     padding-left: 0;
 }
@@ -1761,7 +1767,7 @@ body .wrapper-preview-menu .preview-menu {
 }
 .wrapper-course-material .course-material, .wrapper-preview-menu .preview-menu {
     margin: 0 auto;
-    max-width: 1920px;
+    max-width: var(--page-max-width);
     width: 100%;
 }
 .breadcrumbs-header {
@@ -1779,6 +1785,7 @@ body .wrapper-preview-menu .preview-menu {
     position: absolute;
     right: 0;
     z-index: 10;
+    margin-top: -100px;
 }
 .header-lang-selector{
     border: 1px #004B93 solid ;
