--- a/lms/templates/certificates/validate_certificates.html
+++ b/lms/templates/certificates/validate_certificates.html
@@ -21,7 +21,7 @@
     }
 </style>
 <section class="container-fluid px-0" id="certificate_validation">
-    <div class="container-center">
+    <div class="container-center max-course-container mx-auto">
         <img src="${static.url('open-uchile-theme/images/banner-04-bg.jpg')}" alt='${_("Certificates validation")}' class="mx-auto openuchile-header d-block">
         <div class="centered">${_("Certificates validation")}</div>
     </div>
