--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -31,7 +31,7 @@
   }
 </script>
 <main id="main" aria-label="Content" tabindex="-1">
-  <section class="courses-list">
+  <section class="courses-list w-100">
     <div class="row m-0">
       <div class="col-md-3 open-filter-bar" id="filter-bar">
         <aside aria-label="${_('Refine your search')}" class="search-facets phone-menu pl-5">
@@ -102,7 +102,7 @@
             </div>
           </section>
       </div>
-      <div class="col-sm-12 col-md-9" id="section-courses">
+      <div class="col-sm-12 col-md-9 p-0" id="section-courses">
         <section>
           <div class="open-search-container py-5">
             <div class=" row m-0 p-2 w-100">
