--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -18,7 +18,7 @@ youtube_url = footer_url_config.get('youtube', '')
 linkedin_url = footer_url_config.get('linkedin', '')
 %>
 
-<footer id="openuchile-footer" class="openuchile-bg mt-auto text-center mx-auto py-4">
+<footer id="openuchile-footer" class="openuchile-bg mt-auto text-center mx-auto py-4 max-course-container">
   <div class="border-0 mb-3 text-center">
     <div class="row m-0 mb-4">
       <a href="https://www.uchile.cl/" target="_blank" class="text-decoration-none col-md-6 col-sm-12 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-end justify-content-xl-end">
