--- a/lms/templates/static_templates/faq.html
+++ b/lms/templates/static_templates/faq.html
@@ -25,7 +25,7 @@
     }
 </style>
 <section class="container-fluid px-0" id="faq" >
-    <div class="container-center">
+    <div class="container-center max-course-container mx-auto">
         <img src="${static.url('open-uchile-theme/images/banner-03-bg.jpg')}" alt='${_("FAQ")}' class="mx-auto openuchile-header d-block">
         <div class="centered">${_("FAQ")}</div>
     </div>
