--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -59,9 +59,9 @@ use_schema_org = configuration_helpers.get_value('USE_SCHEMA_ORG', "False")
   </script>
 %endif
 </%block>
-<section class="container-fluid px-0 pb-5" id="main">
+<section class="container-fluid px-0 pb-5 courses-container" id="main">
   <div class="container-center row p-0 m-0 index-front-page">
-    <div class="d-flex justify-content-lg-end justify-content-md-center justify-content-sm-center">
+    <div class="d-flex justify-content-xl-end justify-content-lg-end justify-content-md-center justify-content-sm-center courses-container">
       <p class="text-md-start text-lg-start p-0 p-sm-0 p-md-5 p-lg-5 m-0 m-sm-0 m-dm-5 m-lg-5 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 fw-bold index-text-presentation align-self-center">
         ${_("Extension and outreach lifelong online education")}
       </p>
@@ -73,7 +73,7 @@ use_schema_org = configuration_helpers.get_value('USE_SCHEMA_ORG', "False")
     %>
     <div class="open-carousel-orgs p-2">
       <div class="carousel-wrap">
-        <div class="owl-carousel owl-theme">
+        <div class="owl-carousel owl-theme courses-container">
           %for logo in get_all_logos():
             %if logo[1]:
             <div class="item"><a href="${logo[1]}" target="_blank"><img src="${logo[0]}"></div></a>
@@ -85,7 +85,7 @@ use_schema_org = configuration_helpers.get_value('USE_SCHEMA_ORG', "False")
       </div>
     </div>
   % endif
-  <div class="px-0" >
+  <div class="px-0 courses-container" >
     <%include file="${courses_list}" />
   </div>
 </section>
