--- a/lms/templates/static_templates/faq.html
+++ b/lms/templates/static_templates/faq.html
@@ -27,7 +27,7 @@
 <section class="container-fluid px-0" id="faq" >
     <div class="container-center">
         <img src="${static.url('open-uchile-theme/images/banner-03-bg.jpg')}" alt='${_("FAQ")}' class="mx-auto openuchile-header d-block">
-        <div class="centered">${_("FAQ")}</div>
+        <div class="centered courses-container">${_("FAQ")}</div>
     </div>
     <div class="container px-3">
         <h1 class="text-center">
