--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -659,7 +659,7 @@ a.nav-link.user-menu:hover,
 }
 
 #open-navbar{
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.09);
+    box-shadow: 0px 9px 5px -5px rgba(0, 0, 0, 0.09);
     background-color: white;
     padding-bottom: 1rem;
     font-family: 'Raleway', sans-serif !important;
@@ -2015,5 +2015,34 @@ body .wrapper-preview-menu .preview-menu {
         position: absolute;
         z-index: 1;
         right: 1.25rem;
+    }
+}
+
+.link-new-courses{
+    font-size: 16px;
+    text-decoration: underline;
+    font-weight: bolder;
+    justify-content: center;
+    display: flex;
+}
+
+.link-new-courses,
+.link-new-courses a,
+.link-new-courses a:not(.btn), 
+.link-new-courses a:visited:not(.btn){
+    color: #172C6B;
+}
+.link-new-courses .a:not(.btn):hover,
+.link-new-courses a:not(.btn):focus, 
+.link-new-courses a:visited:not(.btn):hover, 
+.link-new-courses a:visited:not(.btn):focus{
+    color: #008852;
+}
+
+@media screen  and (min-width: 600px) {
+    .link-new-courses{
+        display: flex;
+        justify-content: end;
+        margin-right: 1rem;
     }
 }
