--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2306,6 +2306,23 @@ body .wrapper-preview-menu .preview-menu {
     color: #494949;
     opacity: 50%;
 }
+.page-content-container,
+.eolcompletion-content,
+.eolcompletion-wrapper{
+    max-width: 1765px;
+}
+
+body.view-in-course .course-wrapper, body.view-in-course .profile-wrapper, body.view-in-course .instructor-dashboard-wrapper-2, body.view-in-course .wiki-wrapper, body.view-in-course .teams-wrapper, body.view-in-course .static_tab_wrapper{
+    max-width: 1765px;
+}
+#dashboard-main{
+    max-width: 1765px;
+}
+
+#content  main#main{
+    display: flex;
+    justify-content: center;
+}
 
 .link-new-courses{
     font-size: 16px;
@@ -2335,4 +2352,18 @@ body .wrapper-preview-menu .preview-menu {
         right: 1.25rem;
         margin-right: 2.5%;
     }
+}
+
+.pagination-explorer-class{
+    display: flex;
+    width: inherit;
+}
+
+.courses-list .pagination-explorer-class li{
+    margin: 0px;
+}
+.pagination-explorer-class .page-item.active .page-link{
+    background-color: #008852;
+    border-color: #008852;
+    color: white;
 }
