--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2218,6 +2218,48 @@ body .wrapper-preview-menu .preview-menu {
 	}
 }
 
+@media (max-width: 1000px) {
+    #empty-courses-image{
+        width: 50vw;
+    }
+}
+@media (max-width: 600px) {
+    #empty-courses-message p{
+        font-size: 5vw;
+    }
+}
+
+#empty-courses-message{
+    font-size: 40px;
+    font-weight: 500;
+    color: #494949;
+    opacity: 50%;
+}
+.page-content-container,
+.eolcompletion-content,
+.eolcompletion-wrapper{
+    max-width: var(--page-max-width);
+}
+
+body.view-in-course .course-wrapper, body.view-in-course .profile-wrapper, body.view-in-course .instructor-dashboard-wrapper-2, body.view-in-course .wiki-wrapper, body.view-in-course .teams-wrapper, body.view-in-course .static_tab_wrapper{
+    max-width: var(--page-max-width);
+}
+#dashboard-main{
+    max-width: var(--page-max-width);
+}
+.course-info .courses-container .wrap-instructor-info .instructor-info-action{
+    float: right;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    text-align: right;
+    color: #c2387d;
+}
+#content  main#main .courses-list{
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .link-new-courses{
     font-size: 16px;
     text-decoration: underline;
@@ -2246,20 +2288,17 @@ body .wrapper-preview-menu .preview-menu {
         margin-right: 1rem;
     }
 }
-@media (max-width: 1000px) {
-    #empty-courses-image{
-        width: 50vw;
-    }
-}
-@media (max-width: 600px) {
-    #empty-courses-message p{
-        font-size: 5vw;
-    }
+
+.pagination-explorer-class{
+    display: flex;
+    width: inherit;
 }
 
-#empty-courses-message{
-    font-size: 40px;
-    font-weight: 500;
-    color: #494949;
-    opacity: 50%;
+.courses-list .pagination-explorer-class li{
+    margin: 0px;
+}
+.pagination-explorer-class .page-item.active .page-link{
+    background-color: #008852;
+    border-color: #008852;
+    color: white;
 }
