--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -34,7 +34,7 @@
 <main id="main" aria-label="Content" tabindex="-1">
   <section class="courses-list w-100">
     <div class="row m-0">
-      <div class="col-md-3 open-filter-bar" id="filter-bar">
+      <div class="col-12 col-sm-12 col-md-12 col-xl-3 open-filter-bar" id="filter-bar">
         <aside aria-label="${_('Refine your search')}" class="search-facets phone-menu pl-5">
           <div class="d-flex justify-content-between mb-4"> 
               <a id="clear-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#">${_('Clear All')}</a>
@@ -84,7 +84,7 @@
             <div  id="categories"></div>
           </section>
       </div>
-      <div class="col-sm-12 col-md-9 p-0" id="section-courses">
+      <div class="col-12 col-sm-12 col-md-12 col-xl-9 p-0" id="section-courses">
         <section>
           <div class="open-search-container py-5">
             <div class=" row m-0 p-2 w-100">
