--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -1511,6 +1511,15 @@ aside h2.open-refine-search{
         margin-right: 20px !important;
     }
   }
+    @media (min-width: 1200px) {
+     #filter-bar {
+        position: sticky;
+        top: 1rem;
+        height: fit-content;
+        align-self: flex-start;
+        z-index: 100;
+    }
+  }
 
 .open-carousel-orgs .carousel-wrap .owl-theme .owl-dots .owl-dot.active span{
     background: #004B93 ;
