refactor: change title dimension from p to h1

--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -66,9 +66,9 @@ use_schema_org = configuration_helpers.get_value('USE_SCHEMA_ORG', "False")
 <section class="container-fluid px-0 pb-5 courses-container" id="main">
   <div class="container-center row p-0 m-0 index-front-page">
     <div class="d-flex justify-content-xl-end justify-content-lg-end justify-content-md-center justify-content-sm-center courses-container">
-      <p class="text-md-start text-lg-start p-0 p-sm-0 p-md-5 p-lg-5 m-0 m-sm-0 m-dm-5 m-lg-5 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 fw-bold index-text-presentation align-self-center">
+      <h1 class="text-md-start text-lg-start p-0 p-sm-0 p-md-5 p-lg-5 m-0 m-sm-0 m-dm-5 m-lg-5 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 fw-bold index-text-presentation align-self-center">
         ${_("Extension and outreach lifelong online education")}
-      </p>
+      </h1>
     </div>
   </div>
   % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
