--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2047,6 +2047,7 @@ body .wrapper-preview-menu .preview-menu {
 }
 
 .index-text-presentation{
+    color: white;
     font-weight: 700;
     font-size: 60px;
     line-height: normal;
