refactor: change  value widder screen

--- a/lms/templates/courses_list.html
+++ b/lms/templates/courses_list.html
@@ -63,7 +63,7 @@
 %else:
   <p class="without-courses" style="padding-bottom: 10px;"> ${_("There are no courses")}</p>
 %endif
-<section class="tab-container courses-container pt-5">
+<section class="tab-container courses-container pt-5 m-5">
   <ul class="nav nav-tabs nav-justified flex-column flex-lg-row" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link flex-sm-fill text-sm-center active" id="about_us-tab" data-toggle="tab" href="#about_us" role="tab" aria-controls="about_us" aria-selected="true">${_("About us")}</a>
