feat: adds gray color to course image in about when course is completed

--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2409,3 +2409,7 @@ body.view-in-course .course-wrapper, body.view-in-course .profile-wrapper, body.
     color: #c2387d;
 }
 
+.course-info .course-about-image.inactive{
+     filter: grayscale(90%);
+
+}
